GNOME Bugzilla – Bug 752674
screen: On monitors-changed, update the window monitor before resizing
Last modified: 2015-07-21 15:47:20 UTC
Since commit 14b0a83f64134fd6669d580558e10b4a225cb1d6 we store the main window monitor instead of computing it every time. This means that we must now ensure that it's updated before trying to use it which we do from meta_screen_resize_func() or else we'll crash on an assertion later on when removing a monitor: assertion failed: (which_monitor < workspace->screen->n_monitor_infos)
Created attachment 307834 [details] [review] screen: On monitors-changed, update the window monitor before resizing
Review of attachment 307834 [details] [review]: OK.
Attachment 307834 [details] pushed as 7e1c6ff - screen: On monitors-changed, update the window monitor before resizing